--- a/Timetable client/package.json
+++ b/Timetable client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "timetable",
-  "productName": "Timetable",
+  "name": "cs-rat",
+  "productName": "CsRat",
   "version": "1.2.0",
-  "description": "timetable app",
+  "description": "A rat client for computer science class",
   "main": "main.js",
   "author": {
     "name": "Anthonym",
@@ -15,39 +15,23 @@
   },
   "scripts": {
     "start": "electron main.js",
-    "lazy-reinstall": "npm install electron",
-    "package-mac": "electron-packager ./ --overwrite --platform=darwin --arch=all --icon=assets/icons/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager ./ --overwrite --asar --platform=win32 --arch=all --icon=assets/icons/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Timetable\"",
-    "package-linux": "electron-packager ./ timetable --overwrite --asar --platform=linux --arch=all --icon=assets/icons/icon.png --prune=true --out=release-builds",
-    "deb-all": "electron-installer-debian --src release-builds/timetable-linux-x64/ --arch x64 --config debian.json && electron-installer-debian --src release-builds/timetable-linux-ia32/ --arch ia32 --config debian.json && electron-installer-debian --src release-builds/timetable-linux-arm64/ --arch arm64 --config debian.json && electron-installer-debian --src release-builds/timetable-linux-armv7l/ --arch armv7l --config debian.json",
-    "electron-builder": "electron-builder",
     "postinstall": "electron-builder install-app-deps",
-    "builder-default": "electron-builder",
-    "builder-linux": "electron-builder --linux appimage pacman deb zip snap",
     "builder-win": "electron-builder --win --ia32 --x64"
   },
   "build": {
-    "appId": "com.anthonym.Timetable",
-    "icon": "assets/icons/icon.png",
-    "productName": "Timetable",
+    "appId": "com.anthonym.csrat",
+    "icon": "assets/icons/rat_icon.ico",
+    "productName": "CSrat",
     "copyright": "Copyright © 2020 ${author}",
     "buildVersion": "1.0.0",
     "remoteBuild": "true",
     "asar": "true",
-    "mac": {
-      "category": "utility",
-      "icon": "assets/icons/icon.png"
-    },
     "win": {
       "target": "nsis",
-      "icon": "assets/icons/icon.ico"
-    },
-    "linux": {
-      "icon": "assets/icons/icon.png",
-      "category": "utility"
+      "icon": "assets/icons/rat_icon.ico"
     }
   },
-  "icon": "assets/icons/icon.ico",
+  "icon": "assets/icons/rat_icon.ico",
   "displayName": "Timetable",
   "bin": "TT01",
   "license": "ISC",
@@ -58,6 +42,7 @@
   },
   "dependencies": {
     "anchorme": "^2.1.2",
+    "axios": "^0.21.0",
     "electron-store": "^6.0.1",
     "electron-window-state": "^5.0.3",
     "fs": "0.0.1-security",
