Incomming files work sometimes

--- a/desktop.ini
+++ b/desktop.ini
@@ -3,4 +3,4 @@ IconResource=D:\Git\CS-rat\Timetable client\assets\icons\rat_icon.ico,0
 [ViewState]
 Mode=
 Vid=
-FolderType=Generic
+FolderType=Documents
